--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,7 +4,7 @@
   <ul>
   <% @categories.each do  |category|%>
   <li><%= category.title  %></li>
-  <div class="card">
+  <div class="card" id="<%= category.id %>">
     <ul>
       <% category.tasks.each do |task|  %>
       <li>
