insertion croix pour fermer

--- a/app/views/emails/_email_show.html.erb
+++ b/app/views/emails/_email_show.html.erb
@@ -1,7 +1,7 @@
 <div class="card">
     <h3 class="card-header">
         <%= @email.object %>
-        <div class="btn float-right" id="close-show">Close</div>
+        <button id="close-show" type="button" class="close" aria-label="Close" aria-hidden="true">&times;</button>
     </h3>
     <div class="card-body">
         <p class="card-text">
